Change GetAccessToken APIs so that they don't pass const ref to blocks.

Objective-C blocks should not be passed as const ref. This CL replaces
APIs that take const ref to an Obj-C block and instead uses a pointer
to a block. This makes the code compatible with ARC in the future.

BUG=738861

Review-Url: https://codereview.chromium.org/2970703002
Cr-Commit-Position: refs/heads/master@{#483992}

Former-commit-id: 853a46cde856de187f916e7b56734a7bba821b36